[CXF-6801]more change when do the merge to master latest